// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI: index render stateless component with values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CLI
    closeCLIOverlay={[Function]}
    isTokenOpen={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="pt-dialog-body"
        >
          <div
            className="pt-form-group"
          >
            <div
              className="pt-form-group pt-intent-danger"
            >
              <div
                className="pt-form-content"
              >
                <a
                  href="https://www.npmjs.com/package/strato-cli"
                >
                  Click here
                </a>
                 to learn how you can easily deploy dapps to STRATO
              </div>
            </div>
          </div>
        </div>,
        <div
          className="pt-dialog-footer"
        >
          <div
            className="pt-dialog-footer-actions"
          >
            <Blueprint.Button
              onClick={[Function]}
              text="Back"
            />
            <Blueprint.Button
              intent={0}
              onClick={[Function]}
              text="Finish"
            />
          </div>
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="pt-form-group"
          >
            <div
              className="pt-form-group pt-intent-danger"
            >
              <div
                className="pt-form-content"
              >
                <a
                  href="https://www.npmjs.com/package/strato-cli"
                >
                  Click here
                </a>
                 to learn how you can easily deploy dapps to STRATO
              </div>
            </div>
          </div>,
          "className": "pt-dialog-body",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="pt-form-group pt-intent-danger"
            >
              <div
                className="pt-form-content"
              >
                <a
                  href="https://www.npmjs.com/package/strato-cli"
                >
                  Click here
                </a>
                 to learn how you can easily deploy dapps to STRATO
              </div>
            </div>,
            "className": "pt-form-group",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="pt-form-content"
              >
                <a
                  href="https://www.npmjs.com/package/strato-cli"
                >
                  Click here
                </a>
                 to learn how you can easily deploy dapps to STRATO
              </div>,
              "className": "pt-form-group pt-intent-danger",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <a
                    href="https://www.npmjs.com/package/strato-cli"
                  >
                    Click here
                  </a>,
                  " to learn how you can easily deploy dapps to STRATO",
                ],
                "className": "pt-form-content",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Click here",
                    "href": "https://www.npmjs.com/package/strato-cli",
                  },
                  "ref": null,
                  "rendered": "Click here",
                  "type": "a",
                },
                " to learn how you can easily deploy dapps to STRATO",
              ],
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="pt-dialog-footer-actions"
          >
            <Blueprint.Button
              onClick={[Function]}
              text="Back"
            />
            <Blueprint.Button
              intent={0}
              onClick={[Function]}
              text="Finish"
            />
          </div>,
          "className": "pt-dialog-footer",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Blueprint.Button
                onClick={[Function]}
                text="Back"
              />,
              <Blueprint.Button
                intent={0}
                onClick={[Function]}
                text="Finish"
              />,
            ],
            "className": "pt-dialog-footer-actions",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "onClick": [Function],
                "text": "Back",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "intent": 0,
                "onClick": [Function],
                "text": "Finish",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="pt-dialog-body"
          >
            <div
              className="pt-form-group"
            >
              <div
                className="pt-form-group pt-intent-danger"
              >
                <div
                  className="pt-form-content"
                >
                  <a
                    href="https://www.npmjs.com/package/strato-cli"
                  >
                    Click here
                  </a>
                   to learn how you can easily deploy dapps to STRATO
                </div>
              </div>
            </div>
          </div>,
          <div
            className="pt-dialog-footer"
          >
            <div
              className="pt-dialog-footer-actions"
            >
              <Blueprint.Button
                onClick={[Function]}
                text="Back"
              />
              <Blueprint.Button
                intent={0}
                onClick={[Function]}
                text="Finish"
              />
            </div>
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="pt-form-group"
            >
              <div
                className="pt-form-group pt-intent-danger"
              >
                <div
                  className="pt-form-content"
                >
                  <a
                    href="https://www.npmjs.com/package/strato-cli"
                  >
                    Click here
                  </a>
                   to learn how you can easily deploy dapps to STRATO
                </div>
              </div>
            </div>,
            "className": "pt-dialog-body",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="pt-form-group pt-intent-danger"
              >
                <div
                  className="pt-form-content"
                >
                  <a
                    href="https://www.npmjs.com/package/strato-cli"
                  >
                    Click here
                  </a>
                   to learn how you can easily deploy dapps to STRATO
                </div>
              </div>,
              "className": "pt-form-group",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="pt-form-content"
                >
                  <a
                    href="https://www.npmjs.com/package/strato-cli"
                  >
                    Click here
                  </a>
                   to learn how you can easily deploy dapps to STRATO
                </div>,
                "className": "pt-form-group pt-intent-danger",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <a
                      href="https://www.npmjs.com/package/strato-cli"
                    >
                      Click here
                    </a>,
                    " to learn how you can easily deploy dapps to STRATO",
                  ],
                  "className": "pt-form-content",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Click here",
                      "href": "https://www.npmjs.com/package/strato-cli",
                    },
                    "ref": null,
                    "rendered": "Click here",
                    "type": "a",
                  },
                  " to learn how you can easily deploy dapps to STRATO",
                ],
                "type": "div",
              },
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="pt-dialog-footer-actions"
            >
              <Blueprint.Button
                onClick={[Function]}
                text="Back"
              />
              <Blueprint.Button
                intent={0}
                onClick={[Function]}
                text="Finish"
              />
            </div>,
            "className": "pt-dialog-footer",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Blueprint.Button
                  onClick={[Function]}
                  text="Back"
                />,
                <Blueprint.Button
                  intent={0}
                  onClick={[Function]}
                  text="Finish"
                />,
              ],
              "className": "pt-dialog-footer-actions",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "onClick": [Function],
                  "text": "Back",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "intent": 0,
                  "onClick": [Function],
                  "text": "Finish",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`CLI: index render stateless component without values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CLI
    closeCLIOverlay={[Function]}
    isTokenOpen={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="pt-dialog-body"
        >
          <div
            className="pt-form-group"
          >
            <div
              className="pt-form-group pt-intent-danger"
            >
              <div
                className="pt-form-content"
              >
                <a
                  href="https://www.npmjs.com/package/strato-cli"
                >
                  Click here
                </a>
                 to learn how you can easily deploy dapps to STRATO
              </div>
            </div>
          </div>
        </div>,
        <div
          className="pt-dialog-footer"
        >
          <div
            className="pt-dialog-footer-actions"
          >
            <Blueprint.Button
              onClick={[Function]}
              text="Back"
            />
            <Blueprint.Button
              intent={0}
              onClick={[Function]}
              text="Finish"
            />
          </div>
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="pt-form-group"
          >
            <div
              className="pt-form-group pt-intent-danger"
            >
              <div
                className="pt-form-content"
              >
                <a
                  href="https://www.npmjs.com/package/strato-cli"
                >
                  Click here
                </a>
                 to learn how you can easily deploy dapps to STRATO
              </div>
            </div>
          </div>,
          "className": "pt-dialog-body",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="pt-form-group pt-intent-danger"
            >
              <div
                className="pt-form-content"
              >
                <a
                  href="https://www.npmjs.com/package/strato-cli"
                >
                  Click here
                </a>
                 to learn how you can easily deploy dapps to STRATO
              </div>
            </div>,
            "className": "pt-form-group",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="pt-form-content"
              >
                <a
                  href="https://www.npmjs.com/package/strato-cli"
                >
                  Click here
                </a>
                 to learn how you can easily deploy dapps to STRATO
              </div>,
              "className": "pt-form-group pt-intent-danger",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <a
                    href="https://www.npmjs.com/package/strato-cli"
                  >
                    Click here
                  </a>,
                  " to learn how you can easily deploy dapps to STRATO",
                ],
                "className": "pt-form-content",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Click here",
                    "href": "https://www.npmjs.com/package/strato-cli",
                  },
                  "ref": null,
                  "rendered": "Click here",
                  "type": "a",
                },
                " to learn how you can easily deploy dapps to STRATO",
              ],
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="pt-dialog-footer-actions"
          >
            <Blueprint.Button
              onClick={[Function]}
              text="Back"
            />
            <Blueprint.Button
              intent={0}
              onClick={[Function]}
              text="Finish"
            />
          </div>,
          "className": "pt-dialog-footer",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Blueprint.Button
                onClick={[Function]}
                text="Back"
              />,
              <Blueprint.Button
                intent={0}
                onClick={[Function]}
                text="Finish"
              />,
            ],
            "className": "pt-dialog-footer-actions",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "onClick": [Function],
                "text": "Back",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "intent": 0,
                "onClick": [Function],
                "text": "Finish",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="pt-dialog-body"
          >
            <div
              className="pt-form-group"
            >
              <div
                className="pt-form-group pt-intent-danger"
              >
                <div
                  className="pt-form-content"
                >
                  <a
                    href="https://www.npmjs.com/package/strato-cli"
                  >
                    Click here
                  </a>
                   to learn how you can easily deploy dapps to STRATO
                </div>
              </div>
            </div>
          </div>,
          <div
            className="pt-dialog-footer"
          >
            <div
              className="pt-dialog-footer-actions"
            >
              <Blueprint.Button
                onClick={[Function]}
                text="Back"
              />
              <Blueprint.Button
                intent={0}
                onClick={[Function]}
                text="Finish"
              />
            </div>
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="pt-form-group"
            >
              <div
                className="pt-form-group pt-intent-danger"
              >
                <div
                  className="pt-form-content"
                >
                  <a
                    href="https://www.npmjs.com/package/strato-cli"
                  >
                    Click here
                  </a>
                   to learn how you can easily deploy dapps to STRATO
                </div>
              </div>
            </div>,
            "className": "pt-dialog-body",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="pt-form-group pt-intent-danger"
              >
                <div
                  className="pt-form-content"
                >
                  <a
                    href="https://www.npmjs.com/package/strato-cli"
                  >
                    Click here
                  </a>
                   to learn how you can easily deploy dapps to STRATO
                </div>
              </div>,
              "className": "pt-form-group",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="pt-form-content"
                >
                  <a
                    href="https://www.npmjs.com/package/strato-cli"
                  >
                    Click here
                  </a>
                   to learn how you can easily deploy dapps to STRATO
                </div>,
                "className": "pt-form-group pt-intent-danger",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <a
                      href="https://www.npmjs.com/package/strato-cli"
                    >
                      Click here
                    </a>,
                    " to learn how you can easily deploy dapps to STRATO",
                  ],
                  "className": "pt-form-content",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Click here",
                      "href": "https://www.npmjs.com/package/strato-cli",
                    },
                    "ref": null,
                    "rendered": "Click here",
                    "type": "a",
                  },
                  " to learn how you can easily deploy dapps to STRATO",
                ],
                "type": "div",
              },
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="pt-dialog-footer-actions"
            >
              <Blueprint.Button
                onClick={[Function]}
                text="Back"
              />
              <Blueprint.Button
                intent={0}
                onClick={[Function]}
                text="Finish"
              />
            </div>,
            "className": "pt-dialog-footer",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Blueprint.Button
                  onClick={[Function]}
                  text="Back"
                />,
                <Blueprint.Button
                  intent={0}
                  onClick={[Function]}
                  text="Finish"
                />,
              ],
              "className": "pt-dialog-footer-actions",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "onClick": [Function],
                  "text": "Back",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "intent": 0,
                  "onClick": [Function],
                  "text": "Finish",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;
